<resources>
    <string name="app_name">Android Workshop</string>
    <string name="hello_message">Hello, what\'s your name?</string>
    <string name="insert_name_hint">Insert your name here</string>
    <string name="button_text">Push me</string>
    <string name="button_pass_data">Pass data</string>
    <string name="select_training">Select Training</string>
    <string name="name">Name</string>
    <string name="e_mail">e-mail</string>
    <string name="pass_data_to_activity_b">Pass data to Activity B</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="text_to_share">Text to share</string>
    <string name="share_text">Share text</string>
    <string name="share_image">Share image</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="broadcast_running">Broadcast Receiver is running</string>
    <string name="broadcast_stopped">Broadcast Receiver is stopped</string>
    <string name="take_photo">Take photo</string>
    <string name="notifications">Notifications</string>
    <string name="launch_notification">Launch notification</string>
</resources>
